--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,3 +10,4 @@ chrono.workspace = true
 serde.workspace = true
 serde_derive.workspace = true
 serde_json.workspace = true
+thiserror.workspace = true
