--- a/web/pachadb-rescript/package.json
+++ b/web/pachadb-rescript/package.json
@@ -13,5 +13,8 @@
   "license": "MIT",
   "devDependencies": {
     "rescript": "^10.1.4"
+  },
+  "dependencies": {
+    "core-wasm": "../../core-wasm/pkg/"
   }
 }
