--- a/worker-consolidation/Cargo.toml
+++ b/worker-consolidation/Cargo.toml
@@ -12,13 +12,13 @@ default = ["console_error_panic_hook"]
 [dependencies]
 pachadb-core = { path = "../core", version = "*" }
 
-worker = { workspace = true, features = ["queue"] }
+worker.workspace = true
 console_error_panic_hook = { version = "0.1.1", optional = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-futures = "0.3.28"
+futures.workspace = true
 uuid.workspace = true
 reqwest.workspace = true
 chrono.workspace = true
-wasm-logger = "0.2.0"
-log = "0.4.19"
+wasm-logger.workspace = true
+log.workspace = true
