--- a/worker-query/Cargo.toml
+++ b/worker-query/Cargo.toml
@@ -11,14 +11,16 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 pachadb-core = { path = "../core", version = "*" }
+pachadb-nanolog = { path = "../nanolog", version = "*" }
 
-worker.workspace = true
+chrono.workspace = true
 console_error_panic_hook = { version = "0.1.1", optional = true }
+datafrog.workspace = true
+futures.workspace = true
+log.workspace = true
+reqwest.workspace = true
 serde = { workspace = true }
 serde_json = { workspace = true }
-futures.workspace = true
 uuid.workspace = true
-reqwest.workspace = true
-chrono.workspace = true
 wasm-logger.workspace = true
-log.workspace = true
+worker.workspace = true
