--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,6 +10,7 @@ path = "main.rs"
 
 [dependencies]
 pachadb-core = { path = "../core", version = "*" }
+pachadb-nanolog = { path = "../nanolog", version = "*" }
 
 anyhow.workspace = true
 env_logger.workspace = true
