--- a/worker-consolidation/wrangler.toml
+++ b/worker-consolidation/wrangler.toml
@@ -5,8 +5,8 @@ compatibility_date = "2023-07-24"
 usage_model = "bundled"
 
 kv_namespaces = [
-    { binding = "pachadb-entities-store", id = "f65a15f705814e5eb00202ef19ed27ca" },
-    { binding = "pachadb-facts-store", id = "88c04e76bdb04ff78783cc5d850c86ac" }
+  { binding = "pachadb-entities-store", id = "f65a15f705814e5eb00202ef19ed27ca" },
+  { binding = "pachadb-facts-store", id = "88c04e76bdb04ff78783cc5d850c86ac" },
 ]
 
 [[queues.consumers]]
@@ -20,4 +20,3 @@ binding = "pachadb-entities-queue"
 
 [build]
 command = "cargo install worker-build && worker-build --release"
-
