--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -3,11 +3,16 @@ name = "pachadb-core"
 version = "0.0.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+pachadb-nanolog = { path = "../nanolog", version = "*" }
+
+anyhow.workspace = true
+async-trait.workspace = true
 chrono.workspace = true
 serde.workspace = true
 serde_derive.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
+uuid.workspace = true
+futures.workspace = true
+async-recursion = "1.0.4"
