--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -7,12 +7,18 @@ edition = "2021"
 pachadb-nanolog = { path = "../nanolog", version = "*" }
 
 anyhow.workspace = true
+assert_matches.workspace = true
+async-recursion.workspace = true
 async-trait.workspace = true
 chrono.workspace = true
+futures.workspace = true
+quickcheck_async.workspace = true
 serde.workspace = true
 serde_derive.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
 uuid.workspace = true
-futures.workspace = true
-async-recursion = "1.0.4"
+
+[dev-dependencies]
+quickcheck.workspace = true
+tokio.workspace = true
