build core as cdylib too

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -3,6 +3,9 @@ name = "pachadb-core"
 version = "0.0.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 pachadb-nanolog = { path = "../nanolog", version = "*" }
 
