--- a/examples/cloudflare-simple/Cargo.toml
+++ b/examples/cloudflare-simple/Cargo.toml
@@ -13,7 +13,7 @@ default = ["console_error_panic_hook"]
 pachadb-core = { path = "../../core", version = "*" }
 pachadb-backend-cloudflare = { path = "../../backend-cloudflare", version = "*" }
 
-worker.workspace = true
+worker = { version = "0.0.17", features = ["queue"] }
 console_error_panic_hook = { version = "0.1.1", optional = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
