--- a/worker-intake/Cargo.toml
+++ b/worker-intake/Cargo.toml
@@ -13,7 +13,6 @@ default = ["console_error_panic_hook"]
 pachadb-core = { path = "../core", version = "*" }
 pachadb-backend-cloudflare = { path = "../backend-cloudflare", version = "*" }
 
-worker.workspace = true
 console_error_panic_hook = { version = "0.1.1", optional = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -23,3 +22,4 @@ reqwest.workspace = true
 chrono.workspace = true
 wasm-logger.workspace = true
 log.workspace = true
+worker = { version = "0.0.17", features = ["queue"] }
