--- a/core-wasm/Cargo.toml
+++ b/core-wasm/Cargo.toml
@@ -19,6 +19,7 @@ wasm-bindgen = "0.2.87"
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
+wasm-logger.workspace = true
 uuid.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde-wasm-bindgen = "0.5.0"
@@ -28,10 +29,12 @@ tsify = "0.4.5"
 time = {workspace= true, features =["wasm-bindgen"] }
 once_cell = "1.18.0"
 wasm-bindgen-futures = "0.4.37"
+log.workspace = true
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
-opt-level = "s"
+opt-level = "z"
+lto = true
