--- a/core-wasm/Cargo.toml
+++ b/core-wasm/Cargo.toml
@@ -30,6 +30,7 @@ time = {workspace= true, features =["wasm-bindgen"] }
 once_cell = "1.18.0"
 wasm-bindgen-futures = "0.4.37"
 log.workspace = true
+async-trait.workspace = true
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
