--- a/js-model/package.json
+++ b/js-model/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuidv7": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
