--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "uuidv7": "^1.0.0"
+    "pachadb": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
