basic sync works

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "bun --watch index.js"
   },
+  "dependencies": {
+    "pachadb": "workspace:*"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   }
